# ibkr-toolkit

./: .editorconfig  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STOP_LOSS_GUIDE.md
src/ibkr_tax/: cli.py  config.py  constants.py  exceptions.py
src/ibkr_tax/api/: flex_query.py  trading_client.py
src/ibkr_tax/parsers/: data_parser.py
src/ibkr_tax/services/: stop_loss.py
src/ibkr_tax/utils/: logging.py
src/ibkr_toolkit/: __init__.py  config.py  constants.py  main.py  performance_cli.py  stop_loss_cli.py  web_cli.py
src/ibkr_toolkit/api/: __init__.py  flex_query.py  trading_client.py  web_client.py
src/ibkr_toolkit/parsers/: __init__.py
src/ibkr_toolkit/services/: __init__.py  exchange_rate.py  notification.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_config.py  test_data_parser.py  test_exchange_rate.py  test_integration.py  test_performance.py  test_stop_loss.py
